Fix Notifee dependency version in package.json

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@notifee/react-native": "^9.1.8",
+    "@notifee/react-native": "7.8.2",
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/messaging": "^21.14.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
